application/base/deployment-sample-workload.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-workload
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: sample-workload
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sample-workload
    spec:
      containers:
      - name: sample-workload
        image: quay.io/jgwest-redhat/sample-workload:latest
        imagePullPolicy: Always
#        command:
#        - entrypoint.sh
#        - argocd-repo-server
#        - --redis
#        - $(ARGOCD_REDIS_SERVICE):6379
        ports:
        - containerPort: 8080
