application/base/route-sample-workload.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: sample-workload
spec:
  subdomain: sample-workload
  to:
    kind: Service
    name: sample-workload
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
